--- a/index.html
+++ b/index.html
@@ -172,8 +172,8 @@
                         </div>
                         <div class="card-image">
                             <video autoplay muted>
-                                <source src="/videos/video.mp4" type="video/mp4">
-                                <source src="/videos/video.ogg" type="video/ogg">
+                                <source src="videos/video.mp4" type="video/mp4">
+                                <source src="videos/video.ogg" type="video/ogg">
                             </video>
                         </div>
                         <div class="card-info">
